# Techvantage-App

./: .replit  DEMO_SETUP.md  DEMO_TALKING_POINTS.md  HACKATHON_PREP.md  KEY_FEATURES.md  LOCAL_SETUP.md  PRESENTATION_FLOW.md  README.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  pyproject.toml  replit.md  start-local.bat  start-local.sh
backend/: .env  .env.example  main.py  requirements.txt  simple_main.py
backend/app/config/: auth.py  database.py
backend/app/controllers/: auth_controller.py  institution_controller.py  student_controller.py  user_controller.py
backend/app/models/: institution.py  score.py  student.py  user.py
backend/app/routers/: ai.py  auth.py  institutions.py  students.py  users.py
backend/app/services/: ai_service.py
src/: App.tsx  index.css
src/components/: LandingPage.tsx  Layout.tsx  Navigation.tsx  ProtectedRoute.tsx
src/components/auth/: LoginPage.tsx
src/components/icons/: IconSet.tsx  IconShowcase.tsx  IconTest.tsx  README.md  SimpleIconSet.tsx
src/components/institution/: AIInsights.tsx  InstitutionDashboard.tsx  StudentsAnalytics.tsx
src/components/shared/: CircularProgress.tsx  UserAvatar.tsx
src/components/student/: AIAssistant.tsx  PortfolioBuilder.tsx  StudentDashboard.tsx
src/contexts/: AuthContext.tsx
src/pages/: Dashboard.tsx  Login.tsx  NotFound.tsx  Profile.tsx  Register.tsx  Unauthorized.tsx
src/services/: api.ts
src/styles/: globals.css
